大图预览支持视频，但是需要提前指定视频格式