@@ -14,6 +14,7 @@ import com.casic.titan.commonui.databinding.AdapterFileAddItemBinding;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.Collections;
+import java.util.List;
 
 import pers.fz.mvvm.activity.VideoPlayerActivity;
 import pers.fz.mvvm.api.Config;
@@ -101,7 +102,7 @@ public class FileAddAdapter extends BaseRecyclerViewAdapter<AttachmentBean, Adap
                     return;
                 }
                 if (AttachmentTypeEnum.IMAGE.typeValue.equals(item.getFileType())) {
-                    new PreviewPhotoDialog(v.getContext(), Collections.singletonList(item.getPath()), getAbsoluteAdapterPosition()).show();
+                    new PreviewPhotoDialog(v.getContext(),  List.of(item), getAbsoluteAdapterPosition()).show();
                 } else if (AttachmentTypeEnum.VIDEO.typeValue.equals(item.getFileType())) {
                     Bundle bundleVideo = new Bundle();
                     bundleVideo.putString(VideoPlayerActivity.VIDEO_TITLE, FileUtil.getFileName(item.getPath()));
